--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -8,6 +8,10 @@ on:
         type: string
         required: true
         default: World
+    outputs:
+      current-time:
+        description: 'The time when greeting.'
+        value: ${{ jobs.reusable-job.outputs.current-time }}
 
 jobs:
   reusable-job:
@@ -18,3 +22,5 @@ jobs:
       - name: Set time
         id: time
         run: echo "time=$(date)" >> $GITHUB_OUTPUT
+    outputs:
+      current-time: ${{ steps.time.outputs.time }}
